# SIGNALDuino

./: .gitignore  .gitmodules  .travis.yml  AI_AGENT_COMMANDS.md  CMakeLists.txt  README.md  SIGNALDuino.code-workspace  SIGNALDuino.ino  SIGNALESP.ino  build.sh  cc1101.cpp  cc1101.h  commands.h  compile_config.h  custom_hwids.py  deploy.sh  extra_script.py  functions.h  platformio.ini  send.h  signalDecoder.cpp  signalDecoder.h  size_info.txt  wifi-config.h
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/actions/arduino-cli/: action.yml
.github/workflows/: codeql-analysis.yml  unittest.yml
RF_Receiver/: RF_Receiver.cbp  RF_Receiver.depend  RF_Receiver.ino
RemoteSensor433Receiver/: RemoteSensor433Receiver.ino
__vm/: .SIGNALDuino.vsarduino.h
firmware/: SIGNALduino_3v3prominiCC1101_3321rc4.hex  SIGNALduino_3v3prominiCC1101_3321rc5.hex  SIGNALduino_3v3prominiCC1101_3321rc6.hex  SIGNALduino_3v3prominiCC1101_3321rc8.hex  SIGNALduino_3v3prominiCC1101_332r.hex  SIGNALduino_3v3prominiCC1101_332rc1.hex  SIGNALduino_3v3prominiCC1101_332rc2.hex  SIGNALduino_miniCUL_3321rc4.hex  SIGNALduino_miniCUL_3321rc5.hex  SIGNALduino_miniCUL_3321rc8.hex  SIGNALduino_nanoCC1101_3321rc3.hex  SIGNALduino_nanoCC1101_3321rc4.hex  SIGNALduino_nanoCC1101_3321rc5.hex  SIGNALduino_nanoCC1101_3321rc6.hex  SIGNALduino_nanoCC1101_3321rc8.hex  SIGNALduino_nanoCC1101_332r.hex  SIGNALduino_nanoCC1101_332r_mcD.hex  SIGNALduino_nanoCC1101_332rc1.hex  SIGNALduino_nanoCC1101_332rc2.hex  SIGNALduino_nano_3321rc3.hex  SIGNALduino_nano_3321rc4.hex  SIGNALduino_nano_3321rc5.hex  SIGNALduino_nano_3321rc6.hex  SIGNALduino_nano_3321rc8.hex  SIGNALduino_nano_332r.hex  SIGNALduino_nano_332rc1.hex  SIGNALduino_promini_3321rc8.hex  SIGNALduino_radinoCC1101_3321rc6.hex  SIGNALduino_radinoCC1101_3321rc8.hex  SIGNALduino_radinoCC1101_332r.hex
include/: ghostfile_compile.txt
libs/Filtering/: filtering.cpp  filtering.h
libs/Filtering/examples/IIR_test/: IIR_test.ino
libs/Filtering/examples/MovingAverage_test/: MovingAverage_test.ino
libs/Filtering/examples/ringbuffer_memorytest/: ringbuffer_memorytest.ino
libs/Filtering/examples/ringbuffer_test/: ringbuffer_test.ino
libs/RemoteSensor/: patternDecoder.cpp  patternDecoder.h
libs/RemoteSensor/examples/manchesterpattern/: manchesterpattern.ino
libs/bitstore/: bitstore.cpp  bitstore.h
src/: cc1101.cpp  cc1101.h  commands.h  compile_config.h  functions.h  helpers.cpp  helpers.h  main.cpp  main.h  mbus.cpp  mbus.h  send.h  signalSTM.h  signalduino.h  signalesp.h  wifi-config.h
src/_micro-api/libraries/SimpleFIFO/: library.properties
src/_micro-api/libraries/SimpleFIFO/src/: README  SimpleFIFO.cpp  SimpleFIFO.h
src/_micro-api/libraries/TimerOne/: library.properties
src/_micro-api/libraries/TimerOne/src/: TimerOne.cpp
src/_micro-api/libraries/bitstore/: library.properties
src/_micro-api/libraries/bitstore/src/: bitstore.cpp  bitstore.h
src/_micro-api/libraries/fastdelegate/: library.properties
src/_micro-api/libraries/fastdelegate/src/: FastDelegate.h
src/_micro-api/libraries/output/: library.properties
src/_micro-api/libraries/output/src/: output.cpp  output.h
src/_micro-api/libraries/patterndecoder/: library.properties
src/_micro-api/libraries/patterndecoder/examples/: manchesterpattern.ino
src/_micro-api/libraries/patterndecoder/src/: patternDecoder.h  patterndecoder.cpp
src/_micro-api/libraries/signalDecoder/: library.properties
src/_micro-api/libraries/signalDecoder/src/: signalDecoder.cpp  signalDecoder.h
src/arduino-ide/SIGNALDuino/: FastDelegate.h  FastDelegateBind.h  SimpleFIFO.cpp  SimpleFIFO.h  TimerOne.cpp  TimerOne.h  WiFiManager.cpp  WiFiManager.h  cc1101.cpp  cc1101.h  commands.h  compile_config.h  functions.h  helpers.cpp  helpers.h  main.cpp  mbus.cpp  mbus.h  output.cpp  output.h  send.h  signalDecoder.cpp  signalDecoder.h  signalSTM.h  signalesp.h  wifi-config.h  wm_consts_en.h  wm_strings_en.h
src/arduino-ide/SIGNALDuino/ArduinoJson/: Configuration.hpp  JsonArraySubscript.hpp  JsonBufferBase.hpp  JsonBufferImpl.hpp  JsonPair.hpp  JsonVariant.hpp  JsonVariantBase.hpp  JsonVariantCasts.hpp  JsonVariantComparisons.hpp  JsonVariantImpl.hpp  JsonVariantOr.hpp  RawJson.hpp  StaticJsonBuffer.hpp  version.hpp
src/arduino-ide/SIGNALDuino/ArduinoJson/Data/: JsonFloat.hpp  JsonInteger.hpp  JsonVariantAs.hpp  JsonVariantContent.hpp  JsonVariantDefault.hpp  List.hpp  ListConstIterator.hpp  ListIterator.hpp  ListNode.hpp  NonCopyable.hpp  ReferenceType.hpp
src/arduino-ide/SIGNALDuino/ArduinoJson/Deserialization/: Comments.hpp  JsonParser.hpp  StringWriter.hpp
src/arduino-ide/SIGNALDuino/ArduinoJson/Polyfills/: attributes.hpp  ctype.hpp  isInteger.hpp  math.hpp  parseFloat.hpp  parseInteger.hpp
src/arduino-ide/SIGNALDuino/ArduinoJson/Serialization/: DummyPrint.hpp  DynamicStringBuilder.hpp  IndentedPrint.hpp  JsonPrintable.hpp  JsonSerializer.hpp  (+2 more)
src/arduino-ide/SIGNALDuino/config/: known_16bit_timers.h
src/arduino-ide/SIGNALduino/: ArduinoJson.cpp  ArduinoJson.h  ArduinoJson.hpp  bitstore.cpp  bitstore.h  fastdelegate.h  signalduino.h  strings_en.h
src/arduino-ide/SIGNALduino/ArduinoJson/: Configuration.hpp  DynamicJsonBuffer.hpp  JsonArray.hpp  JsonArrayImpl.hpp  JsonArraySubscript.hpp  JsonBuffer.hpp  JsonBufferBase.hpp  JsonBufferImpl.hpp  JsonObject.hpp  JsonObjectImpl.hpp  JsonObjectSubscript.hpp  JsonPair.hpp  JsonVariant.hpp  JsonVariantBase.hpp  JsonVariantCasts.hpp  JsonVariantComparisons.hpp  JsonVariantImpl.hpp  JsonVariantOr.hpp  JsonVariantSubscripts.hpp  RawJson.hpp  StaticJsonBuffer.hpp  version.hpp
tests/: .gitignore  CMakeLists.txt  TestStream.h  main.cpp  test_serialCommand.cpp  tests.cpp  tests.h
tests/ci/: build_buttonlibrary.sh  build_library.sh  build_signalDecoderTests.sh  build_win32arduino.sh  emulate_travis.sh  install_googletest.sh  install_rapidassist.sh
tests/testSignalDecoder/: main.cpp  signalDecoder.cpp  signalDecoder.h  tests.cpp  tests.h
tests/win32arduino/: SerialPrinter.cpp  SerialPrinter.h  arduino.cpp  arduino.h  arduinoBaseTypes.h
(+72 files in other folders)
